--- a/src/public/css/pages/main.scss
+++ b/src/public/css/pages/main.scss
@@ -44,6 +44,11 @@
             color: var(--very-dark-gray);
         }
 
+        .website {
+            background: var(--cyan);
+            color: var(--very-dark-gray);
+        }
+
         .technasium {
             background: var(--green);
             color: var(--very-dark-gray);
