--- a/src/public/css/pages/main.scss
+++ b/src/public/css/pages/main.scss
@@ -1,5 +1,4 @@
 #mainContainer {
-    margin: 20px 0;
     padding: 0 15%;
     overflow-y: auto;
     -ms-overflow-style: none;
@@ -72,9 +71,11 @@
     }
 
     #pageLinks {
+        margin-bottom: 100px;
+
         a {
             color: var(--main-text);
-            padding-right: 30px;
+            margin-right: 30px;
         }
     }
 }
